Made project compileable with mvn